# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 // Export your models here. Add one export per file
 export * from "./conversations";
 export * from "./messages";
+export * from "./lesson-completions";
